--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "rollup-plugin-node-resolve": "^2.0.0",
     "rollup-plugin-uglify": "^1.0.1",
     "run-sequence": "^1.2.2",
-    "sinon": "^1.17.5"
+    "sinon": "^1.17.5",
+    "smooth-scroll": "github:cferdinandi/smooth-scroll"
   }
 }
