--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "proxima"
   ],
   "devDependencies": {
+	"form-validator": "git+ssh://git@bitbucket.org/oskarwrobel/form-validator.git#0.2.0",
 	"gulp": "^3.9.1",
 	"guppy-pre-commit": "^0.4.0",
 	"normalize-scss": "^6.0.0",
